# home-discord-bot

./: Cargo.toml  Dockerfile  nomad.hcl
.github/workflows/: docker.yml
src/: main.rs
